<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="45dip"
    android:background="@color/lightgray" >

    <LinearLayout
        android:id="@+id/llayout_home"
        android:layout_width="200dip"
        android:layout_height="30dip"
        android:layout_centerInParent="true"
        android:background="@drawable/topic_top_icon1"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_top_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_top_share"
            android:textColor="@color/white"
            android:textSize="13dip" />

        <TextView
            android:id="@+id/tv_top_hot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_top_hot"
            android:textColor="@color/lightred"
            android:textSize="13dip" />

        <TextView
            android:id="@+id/tv_top_last"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_top_last"
            android:textColor="@color/lightred"
            android:textSize="13dip" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dip"
        android:layout_alignParentBottom="true"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_top_video"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_marginRight="5dip"
            android:src="@drawable/topic_feevideo_head"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/lightred"
            android:textSize="18dip"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_top_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/img_top_back"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_marginRight="5dip"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/tv_top_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/str_top_back"
            android:textColor="@color/lightred"
            android:textSize="15dip" />
    </LinearLayout>

</RelativeLayout>